11-Nov Updates: enabled multiple ws
