# handlers/orderManagement.go
@@ -5,19 +5,24 @@ import (
 	"strconv"
 	"strings"
 
+	"github.com/SoNim-LSCM/TKOH_OMS/constants/orderStatus"
+	"github.com/SoNim-LSCM/TKOH_OMS/database"
+	db_models "github.com/SoNim-LSCM/TKOH_OMS/database/models"
 	errorHandler "github.com/SoNim-LSCM/TKOH_OMS/errors"
 	"github.com/SoNim-LSCM/TKOH_OMS/models"
 	dto "github.com/SoNim-LSCM/TKOH_OMS/models/DTO"
 	"github.com/SoNim-LSCM/TKOH_OMS/models/orderManagement"
 	"github.com/SoNim-LSCM/TKOH_OMS/service"
 	"github.com/SoNim-LSCM/TKOH_OMS/utils"
+	"github.com/SoNim-LSCM/TKOH_OMS/websocket"
 	"golang.org/x/crypto/bcrypt"
+	"gorm.io/gorm"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 // @Summary		Get Delivery Order.
-// @Description	Get the list of delivery order by order status .
+// @Description	Get the list of delivery order by order status which start/end at the staff's duty location.
 // @Tags			Order Management
 // @Accept			*/*
 // @Param			orderStatus	query	[]string	true	"Order Status"
@@ -30,7 +35,7 @@ import (
 // @Security Bearer
 func HandleGetDeliveryOrder(c *fiber.Ctx) error {
 	// verify token
-	_, _, err := utils.CtxToClaim(c)
+	claim, _, err := utils.CtxToClaim(c)
 	// claim, _, err := utils.CtxToClaim(c)
 	if errorHandler.CheckError(err, "Invalid token: ") {
 		return c.Status(400).JSON(models.GetFailResponse("Invalid token: " + err.Error()))
@@ -42,7 +47,7 @@ func HandleGetDeliveryOrder(c *fiber.Ctx) error {
 		return c.Status(400).JSON(models.GetFailResponse("Invalid/missing input: " + err.Error()))
 	}
 
-	orders, err := service.FindOrders("order_status IN ?", statusArray)
+	orders, err := service.FindOrders("order_status IN ? AND (start_location_id = ? OR end_location_id = ?)", statusArray, claim.DutyLocationId, claim.DutyLocationId)
 	// err := service.FindRecords(&user, "orders", "order_status", statusArray, &orders)
 	if errorHandler.CheckError(err, "Failed to search") {
 		return c.Status(400).JSON(models.GetFailResponse("Failed to search: " + err.Error()))
@@ -57,6 +62,7 @@ func HandleGetDeliveryOrder(c *fiber.Ctx) error {
 	if errorHandler.CheckError(err, "Translate from db_models.Orders to orderManagement.OrderList failed") {
 		return c.Status(400).JSON(models.GetFailResponse("Translate from db_models.Orders to orderManagement.OrderList failed"))
 	}
+
 	body := orderManagement.OrderListBody{OrderList: orderList}
 	response := orderManagement.GetDeliveryOrderResponse{Header: header, Body: body}
 	// return the API Response
@@ -97,7 +103,48 @@ func HandleAddDeliveryOrder(c *fiber.Ctx) error {
 	header := models.ResponseHeader{ResponseCode: 200, ResponseMessage: "SUCCESS"}
 	body := orderManagement.OrderListBody{OrderList: orderList}
 	response := orderManagement.AddDeliveryOrderResponse{Header: header, Body: body}
+	websocket.SendBoardcastMessage(body)
+	// return the API Response
+	return c.Status(200).JSON(response)
+}
 
+// @Summary		Get Routine Delivery Order.
+// @Description	Get the list of routine delivery orders.
+// @Tags			Order Management
+// @Accept			*/*
+//
+// @Produce		json
+// @Success		200	{object} orderManagement.OrderListBody
+// @Failure     400 {object} models.FailResponse
+//
+// @Router			/getRoutineDeliveryOrder [get]
+// @Security Bearer
+func HandleGetRoutineDeliveryOrder(c *fiber.Ctx) error {
+	// verify token
+	_, _, err := utils.CtxToClaim(c)
+	// claim, _, err := utils.CtxToClaim(c)
+	if errorHandler.CheckError(err, "Invalid token: ") {
+		return c.Status(400).JSON(models.GetFailResponse("Invalid token: " + err.Error()))
+	}
+
+	routines, err := service.FindRoutines("is_active = ?", true)
+	// err := service.FindRecords(&user, "orders", "order_status", statusArray, &orders)
+	if errorHandler.CheckError(err, "Failed to search") {
+		return c.Status(400).JSON(models.GetFailResponse("Failed to search: " + err.Error()))
+	}
+
+	if len(routines) == 0 {
+		return c.Status(400).JSON(models.GetFailResponse("Routines not found"))
+	}
+
+	header := models.ResponseHeader{ResponseCode: 200, ResponseMessage: "SUCCESS"}
+	routineResponse, err := service.RoutineListToRoutineResponse(routines)
+	if errorHandler.CheckError(err, "Translate from db_models.Orders to orderManagement.OrderList failed") {
+		return c.Status(400).JSON(models.GetFailResponse("Translate from db_models.Orders to orderManagement.OrderList failed"))
+	}
+	body := orderManagement.RoutineOrderListBody{RoutineOrderList: routineResponse}
+	response := orderManagement.GetRoutineDeliveryOrderResponse{Header: header, Body: body}
+	websocket.SendBoardcastMessage(body)
 	// return the API Response
 	return c.Status(200).JSON(response)
 }
@@ -136,7 +183,49 @@ func HandleAddRoutine(c *fiber.Ctx) error {
 	header := models.ResponseHeader{ResponseCode: 200, ResponseMessage: "SUCCESS"}
 	body := orderManagement.RoutineOrderListBody{RoutineOrderList: routineOrderList}
 	response := orderManagement.AddRoutineResponse{Header: header, Body: body}
+	websocket.SendBoardcastMessage(body)
 
+	// return the API Response
+	return c.Status(200).JSON(response)
+}
+
+// @Summary		Update Routine Delivery Order.
+// @Description	Update Routine Delivery Order .
+// @Tags			Order Management
+//
+// @Accept			json
+//
+// @Param todo body dto.UpdateRoutineDeliveryOrderDTO true "Update Delivery Order Parameters"
+//
+// @Produce		json
+// @Success		200	{object} orderManagement.UpdateRoutineDeliveryOrderResponse
+// @Failure     400 {object} models.FailResponse
+//
+// @Router			/updateRoutineDeliveryOrder [post]
+// @Security Bearer
+func HandleUpdateRoutineDeliveryOrder(c *fiber.Ctx) error {
+	// verify token
+	claim, _, err := utils.CtxToClaim(c)
+	if errorHandler.CheckError(err, "Invalid token: ") {
+		return c.Status(400).JSON(models.GetFailResponse("Invalid token: " + err.Error()))
+	}
+	// get the todo from the request body
+	request := dto.UpdateRoutineDeliveryOrderDTO{}
+
+	// validate the request body
+	err = c.BodyParser(&request)
+	if errorHandler.CheckError(err, "Insufficient input paramters") {
+		return c.Status(400).JSON(models.GetFailResponse("Insufficient input paramters: " + err.Error()))
+	}
+
+	routineList, err := service.UpdateRoutineOrders(claim.UserId, request)
+	if err != nil {
+		return c.Status(400).JSON(models.GetFailResponse("Update orders failed" + err.Error()))
+	}
+	header := models.ResponseHeader{ResponseCode: 200, ResponseMessage: "SUCCESS"}
+	body := orderManagement.RoutineOrderListBody{RoutineOrderList: routineList}
+	response := orderManagement.UpdateRoutineDeliveryOrderResponse{Header: header, Body: body}
+	websocket.SendBoardcastMessage(body)
 	// return the API Response
 	return c.Status(200).JSON(response)
 }
@@ -196,6 +285,7 @@ func HandleTriggerHandlingOrder(c *fiber.Ctx) error {
 	header := models.ResponseHeader{ResponseCode: 200, ResponseMessage: "SUCCESS"}
 	body := orderManagement.OrderListBody{OrderList: orderList}
 	response := orderManagement.TriggerHandlingOrderResponse{Header: header, Body: body}
+	websocket.SendBoardcastMessage(body)
 	// return the API Response
 	return c.Status(200).JSON(response)
 }
@@ -207,6 +297,7 @@ func HandleTriggerHandlingOrder(c *fiber.Ctx) error {
 // @Accept			json
 //
 // @Param todo body dto.UpdateDeliveryOrderDTO true "Update Delivery Order Parameters"
+// @Param			processingStatus	query	string	false	"Processing Status"
 //
 // @Produce		json
 // @Success		200	{object} orderManagement.UpdateDeliveryOrderResponse
@@ -234,9 +325,33 @@ func HandleUpdateDeliveryOrder(c *fiber.Ctx) error {
 		return c.Status(400).JSON(models.GetFailResponse("Update orders failed" + err.Error()))
 	}
 
+	// ----------------------------- overwriting fields -----------------------------------
+
+	processingStatusString := c.Query("processingStatus")
+	fmt.Printf("processingStatusString: &s\n", processingStatusString)
+	if processingStatusString != "" {
+		ordersss := []db_models.Orders{}
+		err = database.DB.Transaction(func(tx *gorm.DB) error {
+			service.UpdateRecords(tx, &[]db_models.Orders{}, "orders", utils.CreateMap([]string{"processing_status"}, processingStatusString), "schedule_id = ? AND order_status = ?", request.ScheduleID, orderStatus.Created)
+			return nil
+		})
+		if err != nil {
+			return c.Status(400).JSON(models.GetFailResponse("overwrite processingStatus failed (1)" + err.Error()))
+		}
+		ordersss, err := service.FindOrders("schedule_id = ? AND order_status = ?", request.ScheduleID, orderStatus.Created)
+		if err != nil {
+			return c.Status(400).JSON(models.GetFailResponse("overwrite processingStatus failed (2)" + err.Error()))
+		}
+		orderList, err = service.OrderListToOrderResponse(ordersss)
+		if err != nil {
+			return c.Status(400).JSON(models.GetFailResponse("overwrite processingStatus failed (3)" + err.Error()))
+		}
+	}
+
 	header := models.ResponseHeader{ResponseCode: 200, ResponseMessage: "SUCCESS"}
 	body := orderManagement.OrderListBody{OrderList: orderList}
 	response := orderManagement.UpdateDeliveryOrderResponse{Header: header, Body: body}
+	websocket.SendBoardcastMessage(body)
 	// return the API Response
 	return c.Status(200).JSON(response)
 }
@@ -290,6 +405,7 @@ func HandleCancelDeliveryOrder(c *fiber.Ctx) error {
 	header := models.GetSuccessResponseHeader()
 	body := orderManagement.OrderListBody{OrderList: orderList}
 	response := orderManagement.CancelDeliveryOrderResponse{Header: header, Body: body}
+	websocket.SendBoardcastMessage(body)
 
 	// return the API Response
 	return c.Status(200).JSON(response)
