# models/orderManagement/updateDeliveryOrderResponse.go
@@ -1,0 +1,8 @@
+package orderManagement
+
+import "github.com/SoNim-LSCM/TKOH_OMS/models"
+
+type UpdateDeliveryOrderResponse struct {
+	Header models.ResponseHeader `json:"header"`
+	Body   OrderListBody         `json:"body"`
+}
