# router/main.go
@@ -23,10 +23,14 @@ func SetupRoutes(app *fiber.App) {
 	// Order Management
 	oms.Get("/getDeliveryOrder", handlers.HandleGetDeliveryOrder)
 	oms.Post("/addDeliveryOrder", handlers.HandleAddDeliveryOrder)
-	oms.Post("/addRoutine", handlers.HandleAddRoutine)
+	oms.Get("/getRoutineDeliveryOrder", handlers.HandleGetRoutineDeliveryOrder)
 	oms.Get("/triggerHandlingOrder", handlers.HandleTriggerHandlingOrder)
 	oms.Post("/updateDeliveryOrder", handlers.HandleUpdateDeliveryOrder)
 	oms.Post("/cancelDeliveryOrder", handlers.HandleCancelDeliveryOrder)
+	oms.Post("/addRoutine", handlers.HandleAddRoutine)
+	oms.Post("/updateRoutineDeliveryOrder", handlers.HandleUpdateRoutineDeliveryOrder)
+
+	// for rfms
 	oms.Post("/reportJobStatus", handlers.HandleReportJobStatus)
 	oms.Post("/reportSystemStatus", handlers.HandleReportSystemStatus)
 
@@ -35,9 +39,9 @@ func SetupRoutes(app *fiber.App) {
 	oms.Get("/getDutyRooms", handlers.HandleGetDutyRooms)
 
 	// User Management
-	oms.Get("/testAW2", handlers.HandleTestAW2)
-	oms.Get("/testOW1", handlers.HandleTestOW1)
-	oms.Get("/testMW1", handlers.HandleTestMW1)
-	oms.Get("/testSW1", handlers.HandleTestSW1)
+	oms.Post("/testAW2", handlers.HandleTestAW2)
+	oms.Post("/testOW1", handlers.HandleTestOW1)
+	oms.Post("/testMW1", handlers.HandleTestMW1)
+	oms.Post("/testSW1", handlers.HandleTestSW1)
 
 }
